--- a/app1/app1/Base.lproj/Main.storyboard
+++ b/app1/app1/Base.lproj/Main.storyboard
@@ -219,6 +219,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="4" id="KAL-mJ-1kc"/>
                     <connections>
+                        <outlet property="btngen" destination="J4e-qf-Jan" id="THS-h7-O9Q"/>
+                        <outlet property="btnsave" destination="dAH-4E-2sr" id="xMd-fE-FTl"/>
                         <outlet property="imageInQR" destination="YLJ-lU-XU8" id="XLA-BQ-EU5"/>
                         <outlet property="imageQR" destination="5Fq-mm-KEF" id="SBy-Ar-7s3"/>
                         <outlet property="textfield" destination="huE-Yo-1C3" id="tjf-pq-mAS"/>
@@ -263,61 +265,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3gM-N1-m9h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1312.8" y="1725.7871064467768"/>
-        </scene>
-        <!--Test View Controller-->
-        <scene sceneID="673-eG-jvt">
-            <objects>
-                <viewController id="5gt-TY-Lph" customClass="TestViewController" customModule="app1" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0bk-Cp-49B">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LGB-22-CfY">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="mNU-bY-Y0f">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mNU-bY-Y0f" id="ULA-6W-LVM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RWu-EI-3Uu">
-                                                    <rect key="frame" x="166" y="49" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OYe-CW-ASw">
-                                                    <rect key="frame" x="15" y="8" width="112" height="102"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </view>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="RWu-EI-3Uu" firstAttribute="top" secondItem="ULA-6W-LVM" secondAttribute="topMargin" constant="38" id="87N-0W-Egy"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="RWu-EI-3Uu" secondAttribute="trailing" constant="152" id="Lfn-pg-Z9P"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="RWu-EI-3Uu" secondAttribute="bottom" constant="39" id="vYq-1M-zXa"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="LGB-22-CfY" firstAttribute="top" secondItem="omh-v2-Ams" secondAttribute="top" id="Nhm-uU-2By"/>
-                            <constraint firstItem="omh-v2-Ams" firstAttribute="trailing" secondItem="LGB-22-CfY" secondAttribute="trailing" id="bdx-1f-Cc3"/>
-                            <constraint firstItem="omh-v2-Ams" firstAttribute="bottom" secondItem="LGB-22-CfY" secondAttribute="bottom" id="dkw-eG-6nD"/>
-                            <constraint firstItem="LGB-22-CfY" firstAttribute="leading" secondItem="omh-v2-Ams" secondAttribute="leading" id="pc7-jk-JCj"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="omh-v2-Ams"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NRb-Co-Edq" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2165.5999999999999" y="1752.7736131934034"/>
         </scene>
         <!--3-->
         <scene sceneID="eva-1f-zJR">
